# openvmm

./: Cargo.toml  shell.nix
.github/workflows/: openvmm-ci.yaml  openvmm-pr-release.yaml  openvmm-pr.yaml
Guide/src/dev_guide/getting_started/: build_openhcl.md
ci-flowey/: openvmm-pr.yaml
flowey/flowey_hvlite/src/pipelines/: checkin_gates.rs
flowey/flowey_lib_hvlite/src/: build_openhcl_igvm_from_recipe.rs  resolve_openhcl_kernel_package.rs
flowey/flowey_lib_hvlite/src/_jobs/: cfg_versions.rs
nix/: uefi_mu_msvm.nix
openhcl/underhill_core/: Cargo.toml
openhcl/underhill_core/src/: lib.rs  options.rs  worker.rs
openhcl/underhill_core/src/dispatch/: mod.rs
openhcl/virt_mshv_vtl/src/: lib.rs
openhcl/virt_mshv_vtl/src/processor/: mod.rs
openvmm/membacking/: Cargo.toml
openvmm/membacking/src/: region_manager.rs
openvmm/membacking/src/mapping_manager/: manager.rs  va_mapper.rs
openvmm/membacking/src/memory_manager/: mod.rs
openvmm/openvmm_core/: Cargo.toml
openvmm/openvmm_core/src/worker/: dispatch.rs
openvmm/openvmm_defs/: Cargo.toml
openvmm/openvmm_defs/src/: config.rs
openvmm/openvmm_entry/: Cargo.toml
openvmm/openvmm_entry/src/: cli_args.rs  lib.rs
openvmm/openvmm_entry/src/ttrpc/: mod.rs
openvmm/openvmm_resources/: Cargo.toml
openvmm/openvmm_resources/src/: lib.rs
petri/burette/src/tests/: network.rs
petri/src/vm/: mod.rs
petri/src/vm/openvmm/: construct.rs  mod.rs  modify.rs
support/guid/: Cargo.toml
support/guid/src/: lib.rs
support/sparse_mmap/src/: windows.rs
tmk/tmk_vmm/src/: host_vmm.rs
vm/devices/vmbus/vmbus_basic_relay/: Cargo.toml
vm/devices/vmbus/vmbus_basic_relay/src/: lib.rs
vm/vmcore/src/: monitor.rs  synic.rs
vmm_core/src/: synic.rs
vmm_core/virt/src/: generic.rs
vmm_core/virt_hvf/src/: hypercall.rs
vmm_core/virt_mshv/src/: lib.rs
vmm_core/virt_support_x86emu/src/: translate.rs
vmm_core/virt_whp/src/: lib.rs  memory.rs  synic.rs  vp.rs
vmm_core/vmm_cli/: Cargo.toml
vmm_core/vmm_cli/src/: lib.rs  private.rs
vmm_core/vmm_cli/tests/: conformance.rs
vmm_core/vmm_cli_derive/: Cargo.toml
vmm_core/vmm_cli_derive/src/: lib.rs
(+66 files in other folders)
