# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "vmm_cli_derive"
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["extra-traits", "full"] }

[lints]
workspace = true
