[package]
name = "vmbus_basic_relay"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
user_driver.workspace = true
vmbus_async.workspace = true
vmbus_channel.workspace = true
vmbus_client.workspace = true
vmbus_core.workspace = true
vmbus_ring.workspace = true
vmcore.workspace = true
hcl.workspace = true
hvdef.workspace = true

guid.workspace = true
mesh.workspace = true
pal_async.workspace = true
pal_event.workspace = true
inspect.workspace = true
tracelimit.workspace = true

anyhow.workspace = true
futures.workspace = true
futures-concurrency.workspace = true
thiserror.workspace = true
tracing.workspace = true
zerocopy.workspace = true

[lints]
workspace = true
